Revision history for Perl extension Math::Prime::Util::GMP

0.08  28 March 2013

    - The new ECM and QS make factoring much faster, especially for 30+
      digit inputs.  Factoring should give reasonable times out to 70+
      digits now.  Time is competitive with Pari now.

    - Add William Hart's SIMPQS (a simple QS that is a predecessor to what
      went into FLINT).  Not the fastest by a long shot (yafu and msieve take
      that prize), but it's quite small and works pretty well.  Eventually I
      would like to replace this with a QS of my own.  The main issues are
      (1) no partial relations, (2) uses too much memory, and (3) uses
      Gaussian Elimination for LA instead of jasonp's block Lanczos.

    - Switch to a projective ECM with a stage 2.  Much better results, but
      note that it doesn't build up to B1 like the old version.

0.07  19 March 2013

    - Tiny speedup when passing in bigints.

    - Some speedups in pbrent, pbrent usage, and small prime iterator.
      Factoring small (< ~30 digit) numbers is faster.

    - Handle large and small M-R bases just like MPU does -- mod with n,
      then return 1 if base <= 1 or base >= n-1.

0.06  17 December 2012

    - Fix 1-byte memory overrun (thanks to CPAN Testers, Solaris, Valgrind).

    - Add factoring of small numbers.  Helps a little when the input gets
      reduced enough to fit into a UV.

0.05  15 December 2012

    - Add AKS primality test.  Super slow, but nice to have around.

    - ECM is faster.

    - Add a small prime iterator, which means _much_ less memory and faster
      operation for big smoothness factors in pminus1 and ecm factoring.

0.04  11 November 2012

    - Add simple prime_count function.  It uses next_prime so is terribly slow
      for big ranges.  However it's a lot faster than the PP code when given
      a large base and small range e.g. (10**96, 10**96 + 2**18).

    - Add primorial, pn_primorial, and consecutive_integer_lcm functions.
